--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -38,6 +38,9 @@
 
 <img width="1429" alt="image" src="https://github.com/user-attachments/assets/27feb5b6-2b6b-4c53-9bc5-c945fefccbd3" />
 
+
+![image](https://github.com/user-attachments/assets/a1e082d8-28c4-4e89-b2b8-a15372baaf66)
+
 <img width="1000" alt="image" src="https://github.com/user-attachments/assets/f5d82865-5a40-41de-857a-76ca9421e7a6" />
 
 <img width="531" alt="image" src="https://github.com/user-attachments/assets/94e60ffe-c551-46a3-81a3-5b3e2295f4a6" />
@@ -58,6 +61,10 @@
 
 <img width="374" alt="image" src="https://github.com/user-attachments/assets/c7a5c6c6-808d-437a-a80e-08a25ae23eed" />
 
+<img width="672" alt="image" src="https://github.com/user-attachments/assets/a1e082d8-28c4-4e89-b2b8-a15372baaf66" />
 
+<img width="672" alt="image" src="https://github.com/user-attachments/assets/0fbcc8be-dd1a-4fd6-ae61-d4bae035c0de" />
+
+![image](https://github.com/user-attachments/assets/0fbcc8be-dd1a-4fd6-ae61-d4bae035c0de)
 
 
