--- a/사진저장소.md
+++ b/사진저장소.md
@@ -69,6 +69,8 @@
 
 <img width="734" alt="image" src="https://github.com/user-attachments/assets/e6ad8d28-8a08-49b5-9b83-b94ef9fc7c65" />
 
+<img width="734" alt="image" src="https://github.com/user-attachments/assets/c9ada8cf-3de3-4d05-b21e-7369e256a9a8" />
+
 <img width="808" alt="image" src="https://github.com/user-attachments/assets/4e27a385-52e2-4d30-8d82-5db554e03d52" />
 
 
